--- a/R_C14_DADA2/3_Phyloseq output and figures/Fig_incubation vials.Rmd
+++ b/R_C14_DADA2/3_Phyloseq output and figures/Fig_incubation vials.Rmd
@@ -12,6 +12,7 @@ library(here)
 source(here("3_Phyloseq output and figures", "init_files", "init.R")) #for libraries
 source(here("3_Phyloseq output and figures", "init_files", "init_markdown.R")) #for markdown libraries
 source(here("3_Phyloseq output and figures", "init_files", "define_functions.R")) #functions to 1.transform to dataframe, 2.normalise and 3.create treemaps 
+source(here("3_Phyloseq output and figures", "trophic_mode", "trophic_function.R"))  # Function to assign trophic function for phyloseq objects.
 source(here("3_Phyloseq output and figures", "init_files", "colours_petb.R")) #colours
 source(here("3_Phyloseq output and figures", "init_files", "colours_18sv4.R")) # predetermined colours
 ```
