--- a/R_C14_rates calculation/1_Map, CTD, nutrients, cell abund/CTD_nutrients_data_2.0.Rmd
+++ b/R_C14_rates calculation/1_Map, CTD, nutrients, cell abund/CTD_nutrients_data_2.0.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "C14 CTD and nutrients"
+title: "C14 CTD_nutrients_cell abund"
 author: "Denise Ong"
 date: "2/28/2021"
 output: pdf_document
 ---
-Plots and tables for CTD and nutrients. 
+Plots and tables for CTD, nutrients and cell abundance. 
 - all obtained from morning CTD- 9-12pm
 - remove all SA-sc-b cycles
 - select only days that correspond to incubation experiments
@@ -34,10 +34,10 @@ opts_knit$set(width=75)
 
 ```{r, message=FALSE, warning=FALSE}
 library(here)
-source(here("init_files", "init.R")) #for libraries
-source(here("init_files", "init_markdown.R")) #for maerkdown libraries
+source(here("0_init_files", "init.R")) #for libraries
+source(here("0_init_files", "init_markdown.R")) #for maerkdown libraries
 
-colours_cycle <- readxl::read_excel("init_files/colours_cycle.xlsx")
+colours_cycle <- readxl::read_excel(here("0_init_files", "colours_cycle.xlsx"))
 colours_cycle <- structure(colours_cycle$colour,.Names=colours_cycle$cycle)
 ```
 
@@ -53,7 +53,7 @@ colours_cycle <- structure(colours_cycle$colour,.Names=colours_cycle$cycle)
 
 ##Read table
 ```{r}
-CTD_raw <- readxl::read_excel("data_used/TK_CTD Downcasts.xlsx") %>%
+CTD_raw <- readxl::read_excel(here("0_data_used", "TK_CTD Downcasts.xlsx")) %>%
   dplyr::rename(CTD = `cast`) %>%
   mutate(datetime =  dmy_hms(datetime)) %>%
   filter(!is.na(t)) %>%
@@ -68,7 +68,7 @@ CTD_raw <- readxl::read_excel("data_used/TK_CTD Downcasts.xlsx") %>%
   filter(p <= 150)
 CTD_raw
 #check CTD,  date, time
-check <- readxl::read_excel("data_used/TK_CTD Downcasts.xlsx") %>%
+check <- readxl::read_excel(here("0_data_used", "TK_CTD Downcasts.xlsx")) %>%
   dplyr::rename(CTD = `cast`) %>%
   mutate(datetime =  dmy_hms(datetime)) %>%
   filter(!is.na(t)) %>%
@@ -103,7 +103,7 @@ CTD$cycle[grep("317", CTD$julian_day)] = "4"
 CTD$cycle[grep("319", CTD$julian_day)] = "5"
 CTD$cycle[grep("320", CTD$julian_day)] = "5"
 
-CTD <- CTD %>% mutate(cycle_name = recode(cycle, "1" = "SA-Sc",
+CTD <- CTD %>% mutate(cycle_name = dplyr::recode(cycle, "1" = "SA-Sc",
                                     "2" = "SA1",
                                     "3" = "ST1",
                                     "4" = "ST2",
@@ -129,60 +129,7 @@ check
 ```
 ## Plots
 
-```{r}
-
-##Plot temperature
-temp_plot <- CTD %>%
-  group_by(cycle_name, CTD) %>%
-  group_modify(~ add_row(.x,.before=0)) %>% # add gaps in the dataframe for geom_path linebreaks
-  ggplot(aes(x=t_mean, y=p, colour=cycle_name)) + 
- geom_point(size=0.02, alpha = 0.6) +
- # geom_path(size=0.1)+
-  geom_smooth(orientation = "y", method = "loess", se = FALSE) +
-  scale_y_reverse() +
-  ylab("Depth (m)")+
-  xlab(expression(paste("Temperature (",degree,"C)")))+
-  labs(colour = "Cycle") +
-  scale_colour_manual(values = colours_cycle)
- 
-temp_plot
-
-##Plot salinity
-s_plot <- CTD %>%
-  group_by(cycle_name, CTD) %>%
-  group_modify(~ add_row(.x,.before=0)) %>% # add gaps in the dataframe for geom_path linebreaks
-  ggplot(aes(x=s_mean, y=p, colour=cycle_name)) + 
- #   geom_path(size=0.1) +
-  geom_point(size=0.02, alpha = 0.6) +
-  geom_smooth(orientation = "y", method = "loess", se = FALSE) +
-  scale_y_reverse() +
-  ylab(NULL)+
-  xlab("Salinity (PSS)") +
-  labs(colour = "Cycle") +
-  scale_colour_manual(values = colours_cycle)
-
-s_plot
-
-#PAR
-par_plot <- CTD %>%
-  group_by(cycle_name, CTD) %>%
-  group_modify(~ add_row(.x,.before=0)) %>% # add gaps in the dataframe for geom_path linebreaks
-  # filter(p <= 100) %>%
-  filter(par <=1500) %>%
-  ggplot(aes(x=par, y=p, colour=cycle_name)) + 
-   # geom_path(size=0.1) +
- geom_point(size=0.02, alpha = 0.6) +
-  geom_smooth(orientation = "y", se = FALSE, method = "loess") +
-  scale_y_reverse() +
-  ylab(NULL)+
-  xlab("PAR") +
-  labs(colour = "Cycle") +
-  scale_colour_manual(values = colours_cycle)
-
-par_plot
-```
-
-## Figure 1 - T-S, flourescence
+## Main Figure 1 - T-S, flourescence
 
 ```{r}
 ts_plot <- CTD %>%
@@ -239,16 +186,71 @@ CTD_figure
 pdf("figures/4_ctd nutrients/ctd_ts_v2.pdf", height=5, width=7) ; plot(CTD_figure) ; dev.off()
 ```
 
+## Supplementary
+```{r}
+
+##Plot temperature
+temp_plot <- CTD %>%
+  group_by(cycle_name, CTD) %>%
+  group_modify(~ add_row(.x,.before=0)) %>% # add gaps in the dataframe for geom_path linebreaks
+  ggplot(aes(x=t_mean, y=p, colour=cycle_name)) + 
+ geom_point(size=0.02, alpha = 0.6) +
+ # geom_path(size=0.1)+
+  geom_smooth(orientation = "y", method = "loess", se = FALSE) +
+  scale_y_reverse() +
+  ylab("Depth (m)")+
+  xlab(expression(paste("Temperature (",degree,"C)")))+
+  labs(colour = "Cycle") +
+  scale_colour_manual(values = colours_cycle)
+ 
+temp_plot
+
+##Plot salinity
+s_plot <- CTD %>%
+  group_by(cycle_name, CTD) %>%
+  group_modify(~ add_row(.x,.before=0)) %>% # add gaps in the dataframe for geom_path linebreaks
+  ggplot(aes(x=s_mean, y=p, colour=cycle_name)) + 
+ #   geom_path(size=0.1) +
+  geom_point(size=0.02, alpha = 0.6) +
+  geom_smooth(orientation = "y", method = "loess", se = FALSE) +
+  scale_y_reverse() +
+  ylab(NULL)+
+  xlab("Salinity (PSS)") +
+  labs(colour = "Cycle") +
+  scale_colour_manual(values = colours_cycle)
+
+s_plot
+
+#PAR
+par_plot <- CTD %>%
+  group_by(cycle_name, CTD) %>%
+  group_modify(~ add_row(.x,.before=0)) %>% # add gaps in the dataframe for geom_path linebreaks
+  # filter(p <= 100) %>%
+  filter(par <=1500) %>%
+  ggplot(aes(x=par, y=p, colour=cycle_name)) + 
+   # geom_path(size=0.1) +
+ geom_point(size=0.02, alpha = 0.6) +
+  geom_smooth(orientation = "y", se = FALSE, method = "loess") +
+  scale_y_reverse() +
+  ylab(NULL)+
+  xlab("PAR") +
+  labs(colour = "Cycle") +
+  scale_colour_manual(values = colours_cycle)
+
+par_plot
+```
+
+
 
 #Nutrients
 ## Read table 
 combine with C14 hot for the cycle, exp and station number.
 ```{r}
-nutrients_raw <- readxl::read_excel("data_used/TAN1810_nutrients.xls") %>%
+nutrients_raw <- readxl::read_excel(here("0_data_used", "TAN1810_nutrients.xls")) %>%
   dplyr::rename(CTD = `U_Cast`,
                 depth =`Depth`)
 
-CTD_raw <- readxl::read_excel("data_used/TK_CTD Downcasts.xlsx") %>%
+CTD_raw <- readxl::read_excel(here("0_data_used", "TK_CTD Downcasts.xlsx")) %>%
   dplyr::rename(CTD = `cast`) %>%
   mutate(datetime =  dmy_hms(datetime)) %>%
   filter(!is.na(t)) %>%
@@ -294,7 +296,7 @@ nutrients$cycle[grep("320", nutrients$julian_day)] = "5"
 
 nutrients <- nutrients %>%
   filter(!is.na(cycle)) %>%
-  mutate(cycle_name = recode(cycle, "1" = "SA-Sc",
+  mutate(cycle_name = dplyr::recode(cycle, "1" = "SA-Sc",
                                     "2" = "SA1",
                                     "3" = "ST1",
                                     "4" = "ST2",
@@ -373,6 +375,7 @@ writexl::write_xlsx(summary_all, "summary_ctdnut_4.0.xlsx")
 
 
 ## Plots
+supplementary
 ```{r}
 
 nitrate_plot <- nutrients %>%
@@ -447,13 +450,89 @@ si_plot <- nutrients %>%
 si_plot
 ```
 
+# cell abundance profile
+Cell abundance values
+- error in TAN1810_14C-Pico_25052020_QA_1.0.xlsx, U1941 CHANGED TO U9141. excel sheet change to 1.2
+- station U9144 has no counts of FCM at 40 m, so using the one at 35 m
+- Missing U9133 - cycle 2, experiment 5. julian day 309, 5 nov 2018, station 176. Checked the FCM CTD cast number against Moira "ALL_CTDS_BottleData", missing FCM counts for this day. I have decided to take the average counts of for cycle 2
+## Read data
+```{r}
+#use the "complete data TAN1810" sheet for the experiment details.
+C14_hot <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Complete data TAN1810", skip = 11) %>%
+  dplyr::select (`Cycle#`, `EXP#`, `SAMPLE`, `STN`, `DEPTH`, `CTD#`) %>%   
+     dplyr::rename(cycle = `Cycle#`,
+            exp = `EXP#`,
+            depth = `SAMPLE`, 
+            station = `STN`,
+            depth_m = `DEPTH`,
+            ctd = `CTD#`)%>%
+    distinct()%>%
+  drop_na()
 
+# cell abund values
+fcm_raw <- readxl::read_xlsx(here("0_data_used", "MD FCM DATA.xlsx"), sheet= "INITS PROFILES_CYCLE", skip = 2) %>%
+  select(MD, CTD, CYCLE, DEPTH_C14, `SYN/ML`, `PICO/mL`, `NANO/mL`) %>%
+  dplyr::rename(cycle =`CYCLE`,
+                ctd = `CTD`,
+                depth_m = `DEPTH_C14`, # changed U9144 depth
+                Syn = `SYN/ML`,
+                Pico = `PICO/mL`,
+                Nano = `NANO/mL`) %>% 
+  pivot_longer(Syn:Nano, 
+               names_to = "population",
+               values_to = "conc_ml") %>%
+  filter(!is.na(conc_ml))
+```
+
+## plot profile
+```{r}
+ctd_list <- C14_hot %>%
+  select(ctd) %>%
+  unique()
+
+df_fcm_profile <-inner_join(fcm_raw,ctd_list)  %>%
+  filter(ctd != "U9133") %>%# this entry is an average
+  mutate(cycle_name = dplyr::recode(cycle, "1" = "SA-Sc",
+                                    "2" = "SA1",
+                                    "3" = "ST1",
+                                    "4" = "ST2",
+                                    "5" = "SA2")) %>%
+  mutate(cycle_name = fct_relevel(cycle_name, "ST1", "ST2", "SA-Sc", "SA1", "SA2")) %>%
+  mutate(conc_ml = round(conc_ml)) %>%
+  mutate(conc_trans = conc_ml /10^3)
+
+cell_abund_plot <- function (df, pop) {
+  p <- df %>%
+  filter(population == pop) %>%
+  arrange(cycle_name, ctd, depth_m)%>%
+  group_by(cycle_name, ctd) %>%
+  group_modify(~ add_row(.x,.before=0)) %>% # add gaps in the dataframe for geom_path linebreaks
+  ggplot(aes(x=conc_trans, y=depth_m, colour=cycle_name)) + 
+  geom_point(size=0.4, alpha = 0.8) +
+  geom_smooth(orientation = "y",
+             se = FALSE
+              ) +
+  scale_y_reverse(limits = c(100,0))+
+  xlab(expression(paste("Cell abundance (x10^3 mL-1)")))+
+  labs(colour = "Cycle name") +
+  scale_colour_manual(values = colours_cycle)
+  return(p)
+}
+
+syn_plot <- cell_abund_plot(df_fcm_profile, "Syn") +ylab("Depth (m)") +ggtitle("Synechococcus")+theme(legend.position="none")
+pico_plot <- cell_abund_plot(df_fcm_profile, "Pico") +ylab(NULL) +ggtitle("Picoeukaryotes")+theme(legend.position="none")
+nano_plot <- cell_abund_plot(df_fcm_profile, "Nano") +ylab(NULL) +ggtitle("Nanoeukaryotes")
+```
 ## Figure S1
 ```{r}
 library(patchwork)
-plot <- (temp_plot | s_plot |par_plot | plot_spacer()) / (ammonia_plot | nitrate_plot | p_plot | si_plot) +  plot_annotation(tag_levels = 'A') & theme(legend.position="none")
+plot <- (temp_plot | s_plot |par_plot | plot_spacer()) / 
+  (ammonia_plot | nitrate_plot | p_plot | si_plot)/  
+  (syn_plot | pico_plot |nano_plot | plot_spacer()) +  
+  plot_annotation(tag_levels = 'A') & 
+  theme(legend.position="none")
 plot
-pdf("figures/4_ctd nutrients/ctd nut all_v4.pdf", height=7, width=9) ; plot(plot) ; dev.off()
+pdf("ctd nut cell abund_v5.pdf", height=10, width=9) ; plot(plot) ; dev.off()
 
 ```
 
